--- a/linkspage.html
+++ b/linkspage.html
@@ -26,3 +26,4 @@
 				<hr />
 					<p>Copyright &copy; 2022 Decryptionite
 		</body>
+<!-- For anyone reading this code, I was eating Tacobell and watching IShowSpeed while writing this page.-->
