--- a/linkspage.html
+++ b/linkspage.html
@@ -4,6 +4,7 @@
 		<div>
 			<head>
 				<title>Links</title>
+				<link rel="stylesheet" type="text/css" href="linkspage.css" />
 			</head>
 		</div>
 		
@@ -24,6 +25,7 @@
 					<a href="https://www.youtube.com/channel/UC5ejcMYtM3wA66Uk2MLeToQ">PVP Boys YouTube Channel</a>
 				</div>
 				<hr />
+				<div id="Copyright">
 					<p>Copyright &copy; 2022 Decryptionite
+				</div>
 		</body>
-<!-- For anyone reading this code, I was eating Tacobell and watching IShowSpeed while writing this page.-->
