--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 					<hr />
 				</div>
 				
+				<div id=90s>
+					<p align="center">
+						<img src="90s/got_html.gif" />
+						<img src="90s/notepad2.gif" />
+							<a href="https://discord.gg/URHQQbPuzg">
+								<img src="90s/discord2.gif">
+							</a>
+				</div>
+				
 				<div id="main_text">
 					<p>Placeholder. This site was written by: Decryptionite.</p>
 					<p>This place will hold most likely, links, videos, screenshots and etc.</p>
