--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 					<hr />
 				</div>
 				
+				<div id=pages>
+					<p align="center">
+					<a href="linkspage.html">
+					<button>Links</button>
+					</a>
+					<a href="memes.html">
+					<button>Memes</button>
+					</a>
+					<a href="archives.html">
+					<button>Archives</button>
+					</a>
+				</div>
+				
 				<div id=90s>
 					<p align="center">
 						<img src="90s/got_html.gif" />
