--- a/archives.html
+++ b/archives.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<!--This site was written by: Decryptionite-->
+<html>
+		<div>
+			<head>
+				<title>Archives</title>
+				<link rel="stylesheet" type="text/css" href="archives.css" />
+			</head>
+		</div>
+		
+		<body>
+				<div id="title">
+					<h1>PVP Boys</h1>
+					<h2>Archives</h2>
+					<hr />
+				</div>
+				
+				<div id=pages>
+					<p align="center">
+					<a href="linkspage.html">
+					<button>Links</button>
+					</a>
+					<a href="memes.html">
+					<button>Memes</button>
+					</a>
+					<a href="index.html">
+					<button>Home</button>
+					</a>
+				</div>
 placeholder
+				<hr />
+					<div id="Copyright">
+						<p>Copyright &copy; 2022 Decryptionite
+					</div>
+		</body>
