--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 				</div>
 				
 				<div id="main_text">
-					<p>Placeholder. This site was written by: Decryptionite.</p>
-					<p>This place will hold most likely, links, videos, screenshots and etc.</p>
+					<p>PVP Boys is a Discord server founded on 06/27/2020. It started out a server for Minecraft's legacy combat pvp.</p>
+					<p>It currently has over 190,000+ messages. Updated Feburary 2022.</p>
+					<p>The server was created by Decryptionite.</p>
 				</div>
 				
 				<div id="twitter">
