--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 		
 		<body>
 				<div id="title">
-					<h1>PVP Boys</h1>
-					<h2>Homepage</h2>
+					<img src="Images/Top_Icon3.png" />
+					<br />
+					<img src="Images/Homepage.png" />
 					<hr />
 				</div>
 				
