--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <!--This site was written by: Decryptionite-->
 <html>
+		<head>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8207153498490042"
+			crossorigin="anonymous"></script>
+		</head>
+		
 		<div>
 				<title>PVP Boys</title>
 				<link rel="stylesheet" type="text/css" href="index.css" />
@@ -16,11 +21,11 @@
 					<a class="active" href="#home">Home</a>
 					<a href="linkspage.html">Links</a>
 					<a href="archives.html">Archives</a>
-					<a href="50x.html">idk</a>
+					<a href="50x.html">Games</a>
 				</div>
 				
 				<div id="main_text">
-					<p>Home of the teh PVP Boys!<br/>Est. 2020!<p/>
+					<p>Home of teh PVP Boys!<br/>Est. 2020!<p/>
 				</div>
 					
 				<div id=nindees>
