--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<head>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8207153498490042"
 			crossorigin="anonymous"></script>
+			<link rel="shortcut icon" type="image/png" href="favicon.png">
+
 		</head>
 		
 		<div>
